Use new icon for errors, fix spacing, use bubble for duplicate name reporting.
BUG=247692
R=nkostylev@chromium.org
TBR=derat@chromium.org

Review URL: https://chromiumcodereview.appspot.com/18539002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@209736 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: a34dca58e4814cd003cf5e36fccae6f64cedaf80

--- a/chrome/browser/resources/chromeos/login/screen_locally_managed_user_creation.css
+++ b/chrome/browser/resources/chromeos/login/screen_locally_managed_user_creation.css
@@ -139,8 +139,17 @@
 }
 
 #managed-user-creation-error {
-  padding: 100px 50px;
+  padding: 175px 120px 0;
   text-align: center;
+}
+
+#managed-user-creation-error .error-icon {
+  -webkit-margin-after: 50px;
+}
+
+#managed-user-creation-error  .error-message-paragraph {
+  -webkit-margin-after: 40px;
+  -webkit-margin-before: 30px;
 }
 
 .screen-control-button {
@@ -218,7 +227,8 @@
 }
 
 .manager-pod .password-error,
-#managed-user-creation .password-error {
+#managed-user-creation .password-error,
+#managed-user-creation .duplicate-name {
   border: 1px solid red !important;
 }
 
